Add footer, connected swiper

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script type="module" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
-    <script type="text/javascript" src="scripts/main.js"></script>
+
     <div class="header page__header page__section">
       <div class="container">
         <div class="header__content">
@@ -22,6 +23,7 @@
                   src="./images/NAMU.svg"
                   alt="NAMU logo"
                   class="header__logo-pic"
+                  id="top"
                 >
               </a>
             </div>
@@ -41,7 +43,10 @@
     <div class="container">
       <main class="page__main">
 
-        <section class="page__section events">
+        <section
+          class="page__section events"
+          id="events"
+        >
           <h2 class="page__section-title">
             Актуальні події
           </h2>
@@ -110,11 +115,73 @@
           </div>
         </section>
 
-        <section class="page__section gallery">
+        <section
+          class="page__section gallery"
+          id="gallery"
+        >
           <h2 class="page__section-title">
             Галерея
           </h2>
-          <div class="gallery__block">
+          <div class="swiper">
+            <div class="swiper-wrapper gallery__block">
+              <div class="swiper-slide gallery__image">
+                <picture class="gallery__image">
+                  <source
+                    srcset="./images/pictures/picture_1_tablet.png"
+                    media="(min-width: 650px)"
+                  >
+                  <img
+                    class="gallery__image-mobile"
+                    src="./images/pictures/picture_1_mobile.png" alt="Жінка у вінку"
+                  >
+                </picture>
+              </div>
+
+              <div class="swiper-slide gallery__image">
+                <picture class="gallery__image">
+                  <source
+                    srcset="./images/pictures/picture_1_tablet.png"
+                    media="(min-width: 650px)"
+                  >
+                  <img
+                    class="gallery__image-mobile"
+                    src="./images/pictures/picture_1_mobile.png" alt="Жінка у вінку"
+                  >
+                </picture>
+              </div>
+
+              <div class="swiper-slide gallery__image">
+                <picture class="gallery__image">
+                  <source
+                    srcset="./images/pictures/picture_1_tablet.png"
+                    media="(min-width: 650px)"
+                  >
+                  <img
+                    class="gallery__image-mobile"
+                    src="./images/pictures/picture_1_mobile.png" alt="Жінка у вінку"
+                  >
+                </picture>
+              </div>
+
+              <div class="swiper-slide gallery__image">
+                <picture class="gallery__image">
+                  <source
+                    srcset="./images/pictures/picture_1_tablet.png"
+                    media="(min-width: 650px)"
+                  >
+                  <img
+                    class="gallery__image-mobile"
+                    src="./images/pictures/picture_1_mobile.png" alt="Жінка у вінку"
+                  >
+                </picture>
+              </div>
+            </div>
+            <br>
+            <br>
+            <div class="swiper-pagination"></div>
+          </div>
+
+          <div class="gallery__block gallery__block--desktop">
             <picture class="gallery__image">
               <source
                 srcset="./images/pictures/picture_1.png"
@@ -152,14 +219,6 @@
               alt="Море"
               class="gallery__image gallery__image--desktop-4"
             >
-
-            <div class="gallery__slider slider">
-              <div class="slider__dot"></div>
-              <div class="slider__dot"></div>
-              <div class="slider__dot"></div>
-              <div class="slider__dot"></div>
-            </div>
-
           </div>
         </section>
 
@@ -175,8 +234,7 @@
             </p>
 
             <form
-              action="/" class="subscription__block"
-              method="get"
+              action="#" class="subscription__block"
             >
               <input
                 class="subscription__input"
@@ -192,5 +250,135 @@
         </section>
       </main>
     </div>
+
+    <div class="container">
+      <div
+        class="
+          footer
+          page__footer
+          page__section"
+        id="contacts">
+        <div class="footer__content">
+          <div class="footer__logo-wrapper">
+            <a href="#" class="footer__logo">
+              <img
+                src="./images/NAMU.svg"
+                alt="NAMU logo"
+                class="footer__logo-pic"
+              >
+            </a>
+
+            <div class="footer__icon-wrapper">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__icon"
+                target="_blank"
+              >
+                <img
+                  src="./images/Facebook.svg"
+                  alt="Facebook" class="footer__icon-pic"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="footer__icon"
+                target="_blank"
+              >
+                <img
+                  src="./images/Insta.svg"
+                  alt="Instagram" class="footer__icon-pic"
+                >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__text-wrapper">
+            <div class="footer__text">
+              <p class="footer__text-title">Графік роботи</p>
+              <div class="footer__text-content">
+                <div class="footer__text-slot">
+                  <p class="footer__text-time">12:00 — 20:00</p>
+                  <p class="footer__text-day">середа</p>
+                </div>
+                <div class="footer__text-slot">
+                  <p class="footer__text-time">12:00 — 20:00</p>
+                  <p class="footer__text-day">четвер</p>
+                </div>
+                <div class="footer__text-slot">
+                  <p class="footer__text-time">12:00 — 20:00</p>
+                  <p class="footer__text-day">пʼятниця</p>
+                </div>
+                <div class="footer__text-slot">
+                  <p class="footer__text-time">11:00 — 19:00</p>
+                  <p class="footer__text-day">субота</p>
+                </div>
+                <div class="footer__text-slot">
+                  <p class="footer__text-time">11:00 — 19:00</p>
+                  <p class="footer__text-day">неділя</p>
+                </div>
+                <div class="footer__text-slot footer__text-slot--last">
+                  <p class="footer__text-time">Вихідні:</p>
+                  <p class="footer__text-day">понеділок, вівторок</p>
+                </div>
+
+                <p class="footer__text-day"> Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+
+            <div class="footer__text">
+              <p class="footer__text-title">Контакти:</p>
+              <div class="footer__text-content">
+                <p class="footer__text-day">вул. М. Грушевського, 6; Київ, 01001</p>
+                <p class="footer__text-day">тел. +38 (044) 278-13-57</p>
+                <p class="footer__text-day"> факс +38 (044) 278-74-54</p>
+                <p class="footer__text-day">e-mail: info@namu.kiev.ua</p>
+              </div>
+            </div>
+          </div>
+
+          <nav class="footer__nav">
+            <ul class="footer__nav-list">
+              <div class="footer__nav-wrapper">
+                <li class="footer__nav-item">
+                  <a href="#gallery" class="footer__nav-link">
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="footer__nav-item">
+                  <a href="#events" class="footer__nav-link">
+                    Виставки та події
+                  </a>
+                </li>
+              </div>
+            </ul>
+            <ul class="footer__nav-list footer__nav-list--second">
+              <div class="footer__nav-wrapper">
+                <li class="footer__nav-item">
+                  <a href="#top" class="footer__nav-link">
+                    Про нас
+                  </a>
+                </li>
+
+                <li class="footer__nav-item">
+                  <a href="#contacts" class="footer__nav-link">
+                    Контакти
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+
+          <div class="footer__go-top">
+            <a href="#top" class="footer__go-top-link">↑</a>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
