add all suggestions

--- a/src/index.html
+++ b/src/index.html
@@ -382,15 +382,24 @@
               </a>
             </p>
             <p>
-              вул. М. Грушевського, 6; Київ, 01001 тел:
+              <a href="https://goo.gl/maps/mkyQ3M1R9pEfxFsJ6"
+              class="link">
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
               <a href="tel:+38 (044) 278-13-57" class="link">
-               +38 (044) 278-13-57
+                тел:+38 (044) 278-13-57
               </a>
               факс:
               <a href="tel:+38 (044) 278-74-54" class="link">
                 +38 (044) 278-74-54
               </a>
-              e-mail: info@namu.kiev.ua
+              <a
+                href="mailto: e-mail: info@namu.kiev.ua"
+                class="link">
+                e-mail: info@namu.kiev.ua
+              </a>
+
             </p>
           </div>
           <a href="#" class="footer__up-btn">
