--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <script type="module" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
     <header class="header">
@@ -57,22 +58,22 @@
           </div>
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">
+              <a href="#events" class="menu__link">
                 Актуальні події
               </a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">
+              <a href="#gallery" class="menu__link">
                 Галерея
               </a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">
+              <a href="#subscribe" class="menu__link">
                 Підписка
               </a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">
+              <a href="#contacts" class="menu__link">
                 Контакти
               </a>
             </li>
@@ -185,11 +186,208 @@
           </div>
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section
+        hidden
+        class="page__section gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="container">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img
+                    class="gallery_picture"
+                    src="images/photo/gallery_1.png"
+                    alt="picture 1"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="gallery_picture"
+                    src="images/photo/gallery_1.png"
+                    alt="picture 2"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="gallery_picture"
+                    src="images/photo/gallery_1.png"
+                    alt="picture 3"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="gallery_picture"
+                    src="images/photo/gallery_1.png"
+                    alt="picture 4"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="gallery_picture"
+                    src="images/photo/gallery_1.png"
+                    alt="picture 5"
+                  >
+                </div>
+              </div>
+              <!-- Add Pagination -->
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </section>
+
+      <section class="page__section subscribe" id="subscribe">
+        <div class="subscribe__container">
+          <h2 class="subscribe__title">
+            Підписка
+          </h2>
+          <p class="subscribe__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <label class="subscribe__content">
+            <input
+              placeholder="Email"
+              class="subscribe__text"
+              type="email"
+            >
+            <button class="subscribe__button"></button>
+          </label>
+
+
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__block-icon">
+          <div class="grid__item--tablet-1-1 grid__item--1-1 grid__item--desktop-1-1">
+            <a href="#" class="footer__icon">
+              <img
+                class="footer__logo"
+                src="images/NA MUlogo.png"
+                alt="logo"
+              >
+            </a>
+          </div>
+          <div class="wrapper grid__item--tablet-1-1 grid__item--2-2 grid__item--desktop-1-1">
+            <a
+              target="_blank"
+              class="footer__icon"
+              href="https://www.facebook.com/namu.museum/posts/"
+            >
+              <img
+                class="footer__icon-facebook"
+                src="images/Facebookfacebook.png"
+                alt="facebook"
+              >
+            </a>
+            <a
+              target="_blank"
+              class="footer__icon"
+              href="https://www.instagram.com/namu.museum/"
+            >
+              <img
+                class="footer__icon-instagram"
+                src="images/instagram.png"
+                alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+        <div class="grid grid__item grid--desktop-footer">
+          <div class="wrapper grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="footer__block-text">
+              <h4 class="footer__title">
+                Графік роботи
+              </h4>
+              <p class="footer__text">
+                <strong>12:00 — 20:00</strong> середа
+                <br>
+                <strong>12:00 — 20:00</strong> четвер
+                <br>
+                <strong>12:00 — 20:00</strong> п’ятниця
+                <br>
+                <strong>11:00 — 19:00</strong> субота
+                <br>
+                <strong>11:00 — 19:00</strong> неділя
+              </p>
+              <p class="footer__text-second">
+                <strong>Вихідні:</strong> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </p>
+            </div>
+
+          </div>
+          <div class="grid__item--tablet-4-5 grid__item--2-2 grid__item--desktop-5-6">
+            <div class="footer__block-text">
+              <h4 class="footer__title">
+                Контакти:
+              </h4>
+              <p class="footer__text">
+                вул. М. Грушевського, 6;
+                <br>
+                Київ, 01001
+                <br>
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+          <div class="footer__arrow-up grid__item--2-2">
+            <a class="footer__icon" href="# ">
+              <img
+                class="footer__icon-arrow"
+                src="images/Arrow up.png"
+                alt="home"
+              >
+            </a>
+          </div>
+          <div class="grid__item--1-2 grid__item--tablet-2-5 grid__item--desktop-7-7 footer__block--line">
+
+          </div>
+          <div class="grid__item--1-1 grid__item--tablet-2-3 grid__item--desktop-8-9">
+            <div class="footer__block-text">
+              <a href="#gallery" class="footer__title">
+                Галерея
+              </a>
+            </div>
+            <div class="footer__block-text">
+              <a href="#events" class="footer__title">
+                Виставки та події
+              </a>
+            </div>
+          </div>
+          <div class="grid__item--2-2 grid__item--tablet-4-5 grid__item--desktop-10-11">
+            <div class="footer__block-text">
+              <a href="#subscribe" class="footer__title">
+                Про нас
+              </a>
+            </div>
+            <div class="footer__block-text">
+              <a href="#contacts" class="footer__title">
+                Контакти
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </footer>
+
   </body>
 </html>
