fixed problems, gallery(without slider)

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="script" href="./scripts/main.js">
   </head>
   <body>
     <header id="header" class="header">
@@ -129,60 +128,51 @@
       </section>
 
       <section class="page__gallery gallery" id="gallery">
-        <h2 class="gallery__title">
+        <h1 class="gallery__title">
           Галерея
-        </h2>
-
-        <div class="swiper">
-          <div class="swiper__wrapper">
-            <div class="swiper__slide swiper__slide--1">
-              <div class="swiper__slide-image swiper__slide-image--1">
-                <img
-                  src="./images/gallery-1.png"
-                  alt="gallery-1"
-                  class="swiper__slide-img"
-                >
-              </div>
-            </div>
-            <div class="swiper__slide swiper__slide--2">
-              <div class="swiper__slide-image swiper__slide-image--2">
-                <img
-                  src="./images/gallery-2.png"
-                  alt="gallery-2"
-                  class="swiper__slide-img"
-                >
-              </div>
-            </div>
-            <div class="swiper__slide swiper__slide--3">
-              <div class="swiper__slide-image swiper__slide-image--3">
-                <img
-                  src="./images/gallery-3.png"
-                  alt="gallery-3"
-                  class="swiper__slide-img"
-                >
-              </div>
-            </div>
-            <div class="swiper__slide swiper__slide--4">
-              <div class="swiper__slide-image swiper__slide-image--4">
-                <img
-                  src="./images/gallery-4.png"
-                  alt="gallery-4"
-                  class="swiper__slide-img"
-                >
-              </div>
-            </div>
-            <div class="swiper__slide swiper__slide--5">
-              <div class="swiper__slide-image swiper__slide-image--5">
-                <img
-                  src="./images/gallery-5.png"
-                  alt="gallery-5"
-                  class="swiper__slide-img"
-                >
-              </div>
-            </div>
+        </h1>
+        <div class="gallery__content">
+          <div class="gallery__image gallery__image-first">
+            <img
+              src="./images/gallery-1.png"
+              alt="gallery-1"
+              class="gallery__img"
+            >
           </div>
-
-          <div class="swiper-pagination"></div>
+          <div class="gallery__image gallery__image-second">
+            <img
+              src="./images/gallery-2.png"
+              alt="gallery-2"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-third">
+            <img
+              src="./images/gallery-3.png"
+              alt="gallery-3"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-fourth">
+            <img
+              src="./images/gallery-4.png"
+              alt="gallery-4"
+              class="gallery__img"
+            >
+          </div>
+          <div class="gallery__image gallery__image-fifth">
+            <img
+              src="./images/gallery-5.png"
+              alt="gallery-5"
+              class="gallery__img"
+            >
+          </div>
+        </div>
+        <div class="gallery__selector">
+          <img src="./images/ellipse-active.png" alt="1">
+          <img src="./images/ellipse.png" alt="0">
+          <img src="./images/ellipse.png" alt="0">
+          <img src="./images/ellipse.png" alt="0">
         </div>
       </section>
 
@@ -274,6 +264,5 @@
         </div>
       </footer>
     </main>
-    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
