--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,183 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="images\NAMU.svg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <div class="container">
+      <input
+        type="checkbox"
+        name="checkbox"
+        id="checkbox"
+        class="nav__checkbox"
+      >
+
+      <nav class="nav">
+        <div class="nav__opener">
+          <label for="checkbox">
+            <img
+              src="../src/images/x.svg"
+              alt="menu"
+              class="nav__x"
+            >
+            <img
+              src="../src/images/menu.svg"
+              alt="menu"
+              class="nav__opener"
+            >
+          </label>
+        </div>
+        <ul class="nav__menu">
+          <a
+            href="#"
+            class="nav__menu-item"
+            alt="Головна"
+          >
+            <li><p class="p--menu">Головна</p></li>
+          </a>
+
+          <a
+            href="#"
+            class="nav__menu-item"
+            alt="Актуальні події"
+          >
+            <li><p class="p--menu2">Актуальні події</p></li>
+          </a>
+
+          <a
+            href="#"
+            class="nav__menu-item"
+            alt="Галерея"
+          >
+            <li><p class="p--menu3">Галерея</p></li>
+          </a>
+
+          <a
+            href="#"
+            class="nav__menu-item"
+            alt="Підписка"
+          >
+            <li><p class="p--menu4">Підписка</p></li>
+          </a>
+
+          <a
+            href="#"
+            class="nav__menu-item"
+            alt="Контакти"
+          >
+            <li><p class="p--menu5">Контакти</p></li>
+          </a>
+        </ul>
+      </nav>
+      <div class="header">
+        <a href="#" class="header__logo">
+          <h1>
+            na<br>mu
+          </h1>
+        </a>
+      </div>
+
+      <section class="tickets">
+        <h2>
+          <a href="#"  alt="Home page">
+            художній<br>
+            музей
+          </a>
+        </h2>
+
+        <a
+          href="#"
+          class="tickets__btn"
+          alt="Buy ticket"
+        >
+          <p class="tickets__btn-txt">
+            квитки
+          </p>
+          <div class="tickets__tuda">
+            <img src="../src/images/tuda.svg" alt="Buy ticket">
+          </div>
+        </a>
+      </section>
+
+      <section class="actual" id="actual">
+        <h3 class="actual__card-title">
+          Актуальні події
+        </h3>
+
+        <div class="actual__card">
+          <img
+            src="../src/images/1.jpg"
+            alt="Йду і повертаюсь"
+            class="actual__img"
+          >
+
+          <p class="actual__type">
+            ВИСТАВКА
+          </p>
+
+          <p class="actual__date">
+            26.08-29.11.2019
+          </p>
+
+          <h4 class="actual__title">
+            Йду і повертаюсь
+          </h4>
+
+          <p class="actual__description">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </p>
+        </div>
+
+        <div class="actual__card">
+          <img
+            src="../src/images/2.jpg"
+            alt="Йду і повертаюсь"
+            class="actual__img"
+          >
+
+          <p class="actual__type">
+            ВИСТАВКА
+          </p>
+
+          <p class="actual__date">
+            26.08-29.11.2019
+          </p>
+
+          <h4 class="actual__title">
+            І спогади і мрії
+          </h4>
+        </div>
+
+        <div class="actual__card actual__card--last">
+          <img
+            src="../src/images/3.jpg"
+            alt="Йду і повертаюсь"
+            class="actual__img actual__img--last"
+          >
+
+          <p class="actual__type">
+            ЛЕКЦІЯ
+          </p>
+
+          <p class="actual__date">
+            26/08/2019 - 11:00
+          </p>
+
+          <h4 class="actual__title actual__title--last">
+            Від класицизму до романтизму
+          </h4>
+        </div>
+      </section>
+
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
