fixed as recommended

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <section class="header__content">
           <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
           <a
-            href="/" class="header__tickets-button button">КВИТКИ</a>
+            href="#conacts" class="header__tickets-button button">КВИТКИ</a>
         </section>
       </div>
     </header>
@@ -164,24 +164,24 @@
             <button class="gallery-phone__button gallery-phone__button--3"></button>
             <button class="gallery-phone__button gallery-phone__button--4"></button>
             <div class="gallery-phone__slideshow">
-              <div class="gallery-phone__foto">
+              <div class="gallery-phone__photo">
                 <img src="../src/images/gallery/Rectangle 13.5.jpg"
                   alt="картина українки"
                   class="gallery-phone__photo-item"
                 >
               </div>
-              <div class="gallery-phone__foto">
+              <div class="gallery-phone__photo">
                 <img src="../src/images/gallery/Rectangle 3.1.jpg"
                 alt="картина українське село"
                 class="gallery-phone__photo-item">
               </div>
-              <div class="gallery-phone__foto">
+              <div class="gallery-phone__photo">
                 <img src="../src/images/gallery/Rectangle 13.3.jpg"
                 alt="картина парк"
                 class="gallery-phone__photo-item"
               >
               </div>
-              <div class="gallery-phone__foto">
+              <div class="gallery-phone__photo">
                 <img
                   src="../src/images/gallery/Rectangle 13.4.jpg "
                   alt="картина море"
@@ -191,24 +191,24 @@
           </div>
           <div class="main__gallery-desktop gallery-desktop">
             <div class="gallery-desktop__slideshow">
-              <div class="gallery-desktop__foto gallery-desktop__foto--one">
+              <div class="gallery-desktop__photo gallery-desktop__photo--one">
                 <img src="../src/images/gallery/Rectangle 13.5_desktop.jpg"
                   alt="картина українки"
                   class="gallery-desktop__photo-item"
                 >
               </div>
-              <div class="gallery-desktop__foto gallery-desktop__foto--two">
+              <div class="gallery-desktop__photo gallery-desktop__photo--two">
                 <img src="../src/images/gallery/Rectangle 3.1_desktop.jpg"
                 alt="картина українське село"
                 class="gallery-desktop__photo-item">
               </div>
-              <div class="gallery-desktop__foto gallery-desktop__foto--three">
+              <div class="gallery-desktop__photo gallery-desktop__photo--three">
                 <img src="../src/images/gallery/Rectangle 13.3_desktop.jpg"
                 alt="картина парк"
                 class="gallery-desktop__photo-item"
               >
               </div>
-              <div class="gallery-desktop__foto gallery-desktop__foto--four">
+              <div class="gallery-desktop__photo gallery-desktop__photo--four">
                 <img
                   src="../src/images/gallery/Rectangle 13.4_desktop.jpg "
                   alt="картина море"
@@ -236,6 +236,7 @@
                   class="subscription__form-input"
                   name="email"
                   placeholder="E-mail"
+                  required
                 >
                 <button
                   type="submit"
@@ -314,29 +315,51 @@
                   </li>
                 </ul>
                 <p class="footer__schedule-day">
-                  Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+                  Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину <br>до закриття музею
                 </p>
               </div>
-              <div class="footer__contacts">
-                Контакти:
-                <p class="footer__contacts-item">
-                  вул. М. Грушевського, 6; Київ, 01001
+              <div class="footer__contacts contacts">
+                <h3 class="contacts__title">
+                  Контакти:
+                </h3>
+                <a
+                  href="https://goo.gl/maps/hgYxeji3bMMuEQ8q8"
+                  class="contacts__item"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6;<br>Київ, 01001
+                </a>
+                <a
+                  href="tel:+38 044 278-13-57"
+                  class="contacts__item"
+                >
                   тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  href="tel:++38 044 278-74-54"
+                  class="contacts__item"
+                >
                   факс +38 (044) 278-74-54
+                </a>
+                <a
+                  href="email:info@namu.kiev.ua"
+                  class="contacts__item"
+                  target="_blank"
+                >
                   e-mail: info@namu.kiev.ua
-                </p>
+                </a>
               </div>
               <ul class="footer__menu">
-                <li class="footer__menu-item">
-                  <a href="gallery" class="footer__menu-link">Галерея</a>
+                <li>
+                  <a href="#gallery" class="footer__menu-link">Галерея</a>
                 </li>
-                <li class="footer__menu-item">
+                <li>
                   <a href="#about-as" class="footer__menu-link">Про нас</a>
                 </li>
-                <li class="footer__menu-item">
-                  <a href="current-events" class="footer__menu-link">Виставки та події</a>
+                <li>
+                  <a href="#current-events" class="footer__menu-link">Виставки та події</a>
                 </li>
-                <li class="footer__menu-item">
+                <li>
                   <a href="#conacts" class="footer__menu-link">Контакти</a>
                 </li>
               </ul>
