Create burger menu, implement suggested changes

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="icon" href="./images/NAMU.svg">
     <script type="module" src="scripts/main.js"></script>
   </head>
   <body class="page__body">
@@ -16,7 +17,7 @@
       <div class="container">
         <div class="header__content">
           <div class="header__top">
-            <a href="#" class="header__menu-icon"></a>
+            <a href="#menu" class="header__menu-icon"></a>
             <div class="grid">
               <a href="#" class="header__logo">
                 <img
@@ -30,16 +31,58 @@
           </div>
 
           <div class="header__name">
-            <a href="#" class="header__menu-icon header__menu-icon--tablet"></a>
+            <a href="#menu" class="header__menu-icon header__menu-icon--tablet"></a>
             <h1 class="header__title">художній музей</h1>
             <div class="header__button">
-              <a href="#" class="header__button-buy">Квитки</a>
-              <a href="#" class="header__button-click"> > </a>
+              <a href="#events" class="header__button-buy">Квитки</a>
+              <a href="#events" class="header__button-click"> > </a>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__icons">
+            <a href="#" class="menu__icon-cross"></a>
+          </div>
+
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Головна</a>
+            </li>
+            <li class="menu__item">
+              <a href="#subscription" class="menu__link">Про нас</a>
+            </li>
+            <li class="menu__item">
+              <a href="#events" class="menu__link">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a href="#contacts" class="menu__link">Контакти</a>
+            </li>
+          </ul>
+
+          <a
+            href="tel:+38(044)278-13-57" class="menu__call menu__call--phone"
+          >
+            +38 (044) 278-13-57
+          </a>
+
+          <a
+            href="#events" class="menu__call menu__call--action"
+          >
+            Придбати квиток
+          </a>
+        </div>
+      </div>
+    </nav>
+
+
     <div class="container">
       <main class="page__main">
 
@@ -222,7 +265,9 @@
           </div>
         </section>
 
-        <section class="page__section subscription">
+        <section
+          class="page__section subscription" id="subscription"
+        >
           <div class="subscription__content">
             <h2
               class="page__section-title subscription__title"
@@ -330,10 +375,30 @@
             <div class="footer__text">
               <p class="footer__text-title">Контакти:</p>
               <div class="footer__text-content">
-                <p class="footer__text-day">вул. М. Грушевського, 6; Київ, 01001</p>
-                <p class="footer__text-day">тел. +38 (044) 278-13-57</p>
-                <p class="footer__text-day"> факс +38 (044) 278-74-54</p>
-                <p class="footer__text-day">e-mail: info@namu.kiev.ua</p>
+                <a
+                  href="https://goo.gl/maps/tQrpeThQ6WXAihEB9"
+                  class="footer__link"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <br>
+                <a href="tel:+38(044)278-13-57" class="footer__link">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <br>
+                <a href="tel:+38(044)278-74-54" class="footer__link">
+                  факс +38 (044) 278-74-54
+                </a>
+                <br>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__link"
+                  target="_blank"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+                <br>
               </div>
             </div>
           </div>
@@ -357,7 +422,7 @@
             <ul class="footer__nav-list footer__nav-list--second">
               <div class="footer__nav-wrapper">
                 <li class="footer__nav-item">
-                  <a href="#top" class="footer__nav-link">
+                  <a href="#subscription" class="footer__nav-link">
                     Про нас
                   </a>
                 </li>
