add target attribute and fix scrolling under the menu

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body">
+  <body class="page__body page__body--with-menu">
     <header class="header">
       <div class="header__title-block">
         <a href="#menu" class="header__menu header__menu--tablet">
@@ -383,7 +383,9 @@
             </p>
             <p>
               <a href="https://goo.gl/maps/mkyQ3M1R9pEfxFsJ6"
-              class="link">
+              class="link"
+              target="_blank"
+              >
                 вул. М. Грушевського, 6; Київ, 01001
               </a>
 
