--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         class="nav__checkbox"
       >
 
-      <nav class="nav">
+      <!-- <nav class="nav">
         <div class="nav__opener">
           <label for="checkbox">
             <img
@@ -76,7 +76,7 @@
             <li><p class="p--menu5">Контакти</p></li>
           </a>
         </ul>
-      </nav>
+      </nav> -->
       <div class="header">
         <a href="#" class="header__logo">
           <h1>
@@ -154,26 +154,29 @@
           <h4 class="actual__title">
             І спогади і мрії
           </h4>
+
+          <p class="actual__description">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».          </p>
         </div>
 
-        <div class="actual__card actual__card--last">
-          <img
+        <div class="actual__card-last">
+          <!-- <img
             src="../src/images/3.jpg"
             alt="Йду і повертаюсь"
             class="actual__img actual__img--last"
-          >
+          > -->
 
-          <p class="actual__type">
-            ЛЕКЦІЯ
-          </p>
-
-          <p class="actual__date">
-            26/08/2019 - 11:00
-          </p>
-
-          <h4 class="actual__title actual__title--last">
-            Від класицизму до романтизму
-          </h4>
+          <div class="actual__card-frame">
+            <p class="actual__type actual__type--last">
+              ЛЕКЦІЯ
+            </p>
+            <p class="actual__date actual__date--last">
+              26/08/2019 - 11:00
+            </p>
+            <h4 class="actual__title actual__title--last">
+              Від класицизму до романтизму
+            </h4>
+          </div>
         </div>
       </section>
 
