--- a/src/index.html
+++ b/src/index.html
@@ -16,22 +16,17 @@
 
     <header class="header">
       <div class="container">
-
         <div class="header__bg grid grid--desktop">
           <div class="header__bg--img grid__item-tab--4-6 grid__item-desk--6-12"></div>
         </div>
-
         <div class="header__top">
           <div class="header__top-wrap grid grid--desktop">
-            <a href="#" class="header__menu menu menu--open"></a>
+            <a href="#menu" class="header__menu menu menu--open"></a>
             <a href="#" class="header__logo logo grid__item-tab--4-5 grid__item-desk--6-7">
               na <br> mu
             </a>
           </div>
         </div>
-
-
-
         <div class="grid grid--desktop">
           <div class="header__content grid__item-tab--1-3 grid__item-desk--1-5">
             <h1 class="header__title">
@@ -49,14 +44,47 @@
 
           </div>
         </div>
-
       </div>
     </header>
 
+    <nav class="nav-menu" id="menu">
+      <div class="container">
+        <div class="nav-menu__wrap">
+          <a href="#" class="menu menu--close"></a>
+          <a href="#" class="logo">
+            na <br> mu
+          </a>
+        </div>
+        <ul class="nav-list">
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__link">
+            Галерея
+            </a>
+          </li>
 
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__link">
+            Виставки та події
+            </a>
+          </li>
 
-    <nav></nav>
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__link">
+            Про Нас
+            </a>
+          </li>
+
+          <li class="nav-list__item">
+            <a href="#" class="nav-list__link">
+            Квитки
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <main></main>
+
     <footer></footer>
   </body>
 </html>
