--- a/src/index.html
+++ b/src/index.html
@@ -160,19 +160,21 @@
         </div>
 
         <div class="actual__card-last">
-          <!-- <img
+          <img
             src="../src/images/3.jpg"
             alt="Йду і повертаюсь"
             class="actual__img actual__img--last"
-          > -->
+          >
 
           <div class="actual__card-frame">
             <p class="actual__type actual__type--last">
               ЛЕКЦІЯ
             </p>
+
             <p class="actual__date actual__date--last">
               26/08/2019 - 11:00
             </p>
+
             <h4 class="actual__title actual__title--last">
               Від класицизму до романтизму
             </h4>
