--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
           </a>
         </div>
       </div>
+
     </header>
 
     <nav class="menu page__menu" id="menu">
@@ -187,7 +188,6 @@
         </div>
       </section>
       <section
-        hidden
         class="page__section gallery"
         id="gallery"
       >
@@ -195,50 +195,73 @@
           <h2 class="gallery__title">
             Галерея
           </h2>
-          <div class="container">
-            <div class="swiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img
-                    class="gallery_picture"
-                    src="images/photo/gallery_1.png"
-                    alt="picture 1"
-                  >
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="gallery_picture"
-                    src="images/photo/gallery_1.png"
-                    alt="picture 2"
-                  >
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="gallery_picture"
-                    src="images/photo/gallery_1.png"
-                    alt="picture 3"
-                  >
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="gallery_picture"
-                    src="images/photo/gallery_1.png"
-                    alt="picture 4"
-                  >
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="gallery_picture"
-                    src="images/photo/gallery_1.png"
-                    alt="picture 5"
-                  >
-                </div>
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  class="swiper__picture"
+                  src="images/photo/gallery_1.png"
+                  alt="picture 1"
+                >
               </div>
-              <!-- Add Pagination -->
-              <div class="swiper-pagination"></div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper__picture"
+                  src="images/photo/gallery_2.png"
+                  alt="picture 2"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper__picture"
+                  src="images/photo/gallery_3.png"
+                  alt="picture 3"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper__picture"
+                  src="images/photo/gallery_4.png"
+                  alt="picture 4"
+                >
+              </div>
+              <div class="swiper-slide">
+                <img
+                  class="swiper__picture"
+                  src="images/photo/gallery_gues.png"
+                  alt="picture 5"
+                >
+              </div>
+            </div>
+            <!-- Add Pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+          <div class="gallery__block-picture">
+            <div class="grid gallery__block-picture--first">
+              <img
+                class="grid__item--1-3 gallery__block-picture"
+                src="images/photo/gallery_1.png"
+                alt="picture 1"
+              >
+              <img
+                class="grid__item--5-12  gallery__block-picture"
+                src="images/photo/gallery_2.png"
+                alt="picture 2"
+              >
+            </div>
+            <div class="grid gallery__block-picture--second">
+              <img
+                class="grid__item--1-3 gallery__block-picture"
+                src="images/photo/gallery_3.png"
+                alt="picture 3"
+              >
+              <img
+                class="grid__item--9-12  gallery__block-picture"
+                src="images/photo/gallery_4.png"
+                alt="picture 4"
+              >
             </div>
           </div>
-
         </div>
 
 
