--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+
+    <script type="module" src="scripts/main.js"></script>
+
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header page__section">
+      <div class="container grid container--reverse">
+
+        <div class="top-actions--content">
+          <a href="#menu" class="icon icon__menu"></a>
+        </div>
+
+        <div
+          class="header__content-container
+          grid__item
+          grid__item--1-5
+          page__header"
+        >
+
+          <h1 class="header__title
+            page__title"
+          >
+            ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <div
+            class="ticket__frame
+            page__ticket-button"
+          >
+            <div
+              class="ticket__title"
+            >
+              КВИТКИ
+            </div>
+            <div class="ticket__button">
+              <img src="./images/arrow-button.svg" alt="ticket-button">
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="header__image-container
+          grid__item
+          grid__item--6-12">
+          <a href="#" class="icon__link">
+            <img
+              src="../src/images/logo.svg"
+              alt="logo"
+              class="icon__logo"
+            >
+          </a>
+        </div>
+
+      </div>
+    </header>
+
+    <footer class="footer">
+      <div class="container grid">
+        <div class="footer__links-block">
+          <a href="#" class="icon__link">
+            <img
+              src="../src/images/logo.svg"
+              alt="logo"
+              class="icon__logo footer__logo"
+            >
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
